Basic i18n setup w/ localised routes & language switcher

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "dependencies": {
     "@nuxtjs/proxy": "1.2.4",
     "dotenv": "6.0.0",
-    "nuxt": "^1.0.0"
+    "nuxt": "^1.0.0",
+    "nuxt-i18n": "4.0.0"
   },
   "devDependencies": {
     "ajv": "6.5.1",
