--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@nuxtjs/proxy": "1.2.4",
     "dotenv": "6.0.0",
+    "normalize.css": "8.0.0",
     "nuxt": "^1.0.0"
   },
   "devDependencies": {
@@ -39,6 +40,7 @@
     "lodash": "4.17.10",
     "netlify-lambda": "0.4.0",
     "npm-run-all": "4.1.3",
+    "postcss-custom-properties": "7.0.0",
     "request": "2.87.0",
     "request-promise-native": "1.0.5",
     "rimraf": "2.6.2",
