--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dev": "run-p dev:*",
     "dev:client": "nuxt",
     "dev:server": "netlify-lambda serve src/server/functions/",
+    "guide": "start-storybook -p 9001 -c config/storybook -s src/client/static/",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint"
   },
@@ -33,6 +34,11 @@
     "nuxt-i18n": "4.0.0"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "3.4.7",
+    "@storybook/addon-knobs": "3.4.7",
+    "@storybook/addon-links": "3.4.7",
+    "@storybook/addon-options": "3.4.7",
+    "@storybook/vue": "3.4.7",
     "ajv": "6.5.1",
     "babel-eslint": "^8.2.1",
     "datocms-client": "0.5.2",
@@ -41,6 +47,7 @@
     "eslint-loader": "^1.7.1",
     "eslint-plugin-vue": "^4.0.0",
     "lodash": "4.17.10",
+    "lorem-ipsum": "1.0.5",
     "netlify-lambda": "0.4.0",
     "npm-run-all": "4.1.3",
     "postcss-custom-properties": "7.0.0",
