--- a/package.json
+++ b/package.json
@@ -14,16 +14,20 @@
     "prebuild": "touch ./.env && rimraf dist/ && npm run data",
     "build": "NODE_ENV=production run-s build:*",
     "build:client": "nuxt generate",
+    "build:guide": "build-storybook -c config/storybook -o dist/client/guide/",
     "build:server": "netlify-lambda build src/server/functions/",
     "predata": "rimraf src/client/static/data/",
     "data": "dato dump",
     "predev": "rimraf dist/ && npm run data",
     "dev": "run-p dev:*",
-    "dev:client": "nuxt",
+    "dev:client": "PORT=5326 nuxt",
     "dev:server": "netlify-lambda serve src/server/functions/",
     "guide": "start-storybook -p 9001 -c config/storybook -s src/client/static/",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
+    "precommit": "npm run lint",
+    "proxy": "ngrok http 5326",
+    "start": "run-p dev:server start:dist",
+    "start:dist": "http-server './dist/client/' -c-1 -o -p 5326 --proxy 'http://localhost:9000/'"
   },
   "dependencies": {
     "@nuxtjs/proxy": "1.2.4",
@@ -46,9 +50,11 @@
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-vue": "^4.0.0",
+    "http-server": "0.11.1",
     "lodash": "4.17.10",
     "lorem-ipsum": "1.0.5",
     "netlify-lambda": "0.4.0",
+    "ngrok": "3.0.1",
     "npm-run-all": "4.1.3",
     "postcss-custom-properties": "7.0.0",
     "request": "2.87.0",
