Write redirects from Dato to static/_redirects file

--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,6 @@ npm-debug.log
 # generated files
 dist/
 src/client/static/data/
+src/client/static/_redirects
 src/client/static/sitemap.xml
 src/client/static/sw.js
