--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,10 @@ src/client/static/data/
 src/client/static/_redirects
 src/client/static/sitemap.xml
 src/client/static/sw.js
+
+#OSX
+
+.DS_Store
+src/.DS_Store
+src/client/.DS_Store
+src/client/static/.DS_Store
