--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "precommit": "npm run lint",
     "proxy": "ngrok http 5326",
     "start": "run-p dev:server start:dist",
-    "start:dist": "http-server './dist/client/' -c-1 -o -p 5326 --proxy 'http://localhost:9000/'"
+    "start:dist": "hiproxy open --workspace dist/client/ --port 5326 --rewrite-file config/hiproxy/rewrite"
   },
   "dependencies": {
     "@nuxtjs/proxy": "1.2.4",
@@ -50,6 +50,7 @@
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-vue": "^4.0.0",
+    "hiproxy": "1.3.1",
     "http-server": "0.11.1",
     "lodash": "4.17.10",
     "lorem-ipsum": "1.0.5",
