--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "dev": "run-p dev:*",
     "dev:client": "PORT=5326 nuxt",
     "dev:server": "netlify-lambda serve src/server/functions/",
-    "guide": "start-storybook -p 9001 -c config/storybook -s src/client/static/",
+    "guide": "start-storybook -p 5327 -c config/storybook -s src/client/static/",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint",
     "proxy": "ngrok http 5326",
@@ -60,6 +60,7 @@
     "request": "2.87.0",
     "request-promise-native": "1.0.5",
     "rimraf": "2.6.2",
-    "slugify": "1.3.0"
+    "slugify": "1.3.0",
+    "storybook-readme": "3.3.0"
   }
 }
