--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "nuxt-i18n": "4.0.0"
   },
   "devDependencies": {
+    "@storybook/addon-a11y": "3.4.8",
     "@storybook/addon-actions": "3.4.7",
     "@storybook/addon-knobs": "3.4.7",
     "@storybook/addon-links": "3.4.7",
