lib(image-url): add image URL constructor for Imgix
to make images faster

--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "dotenv-safe": "6.0.0",
     "normalize.css": "8.0.0",
     "nuxt": "^1.0.0",
-    "nuxt-i18n": "4.0.0"
+    "nuxt-i18n": "4.0.0",
+    "query-string": "6.1.0"
   },
   "devDependencies": {
     "@storybook/addon-actions": "3.4.7",
