--- a/package.json
+++ b/package.json
@@ -30,39 +30,39 @@
     "start:dist": "http-server './dist/client/' -c-1 -o -p 5326 --proxy 'http://localhost:9000/'"
   },
   "dependencies": {
-    "@nuxtjs/google-analytics": "2.0.2",
-    "@nuxtjs/proxy": "1.2.4",
-    "dotenv": "6.0.0",
-    "dotenv-safe": "6.0.0",
-    "normalize.css": "8.0.0",
+    "@nuxtjs/google-analytics": "^2.0.2",
+    "@nuxtjs/proxy": "^1.2.4",
+    "dotenv": "^6.0.0",
+    "dotenv-safe": "^6.0.0",
+    "normalize.css": "^8.0.0",
     "nuxt": "^1.0.0",
-    "nuxt-i18n": "4.0.0",
-    "query-string": "6.1.0"
+    "nuxt-i18n": "^4.0.0",
+    "query-string": "^6.1.0"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "3.4.7",
-    "@storybook/addon-knobs": "3.4.7",
-    "@storybook/addon-links": "3.4.7",
-    "@storybook/addon-options": "3.4.7",
-    "@storybook/vue": "3.4.7",
-    "ajv": "6.5.1",
+    "@storybook/addon-actions": "^3.4.7",
+    "@storybook/addon-knobs": "^3.4.7",
+    "@storybook/addon-links": "^3.4.7",
+    "@storybook/addon-options": "^3.4.7",
+    "@storybook/vue": "^3.4.7",
+    "ajv": "^6.5.1",
     "babel-eslint": "^8.2.1",
-    "datocms-client": "0.5.2",
     "eslint": "^4.15.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-vue": "^4.0.0",
-    "http-server": "0.11.1",
-    "lodash": "4.17.10",
-    "lorem-ipsum": "1.0.5",
-    "netlify-lambda": "0.4.0",
-    "ngrok": "3.0.1",
-    "npm-run-all": "4.1.3",
-    "postcss-custom-properties": "7.0.0",
-    "request": "2.87.0",
-    "request-promise-native": "1.0.5",
-    "rimraf": "2.6.2",
-    "slugify": "1.3.0",
-    "storybook-readme": "3.3.0"
+    "http-server": "^0.11.1",
+    "lodash": "^4.17.10",
+    "lorem-ipsum": "^1.0.5",
+    "netlify-lambda": "^0.4.0",
+    "ngrok": "^3.0.1",
+    "npm-run-all": "^4.1.3",
+    "postcss-custom-properties": "^7.0.0",
+    "request": "^2.87.0",
+    "request-promise-native": "^1.0.5",
+    "rimraf": "^2.6.2",
+    "slugify": "^1.3.0",
+    "storybook-readme": "^3.3.0",
+    "voorhoede-datocms-client": "0.5.2"
   }
 }
