--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "request-promise-native": "1.0.5",
     "rimraf": "2.6.2",
     "slugify": "1.3.0",
-    "storybook-readme": "3.3.0"
+    "storybook-readme": "3.3.0",
+    "vue-svg-loader": "0.5.0"
   }
 }
