--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "precommit": "npm run lint",
     "proxy": "ngrok http 5326",
     "start": "run-p dev:server start:dist",
-    "start:dist": "http-server './dist/client/' -c-1 -o -p 5326 --proxy 'http://localhost:9000/'"
+    "start:dist": "PORT=5326 node src/server/"
   },
   "dependencies": {
     "@nuxtjs/google-analytics": "^2.0.2",
@@ -51,7 +51,8 @@
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-vue": "^4.0.0",
-    "http-server": "^0.11.1",
+    "express": "^4.16.3",
+    "express-http-proxy": "^1.2.0",
     "lodash": "^4.17.10",
     "lorem-ipsum": "^1.0.5",
     "netlify-lambda": "^0.4.0",
