--- a/package.json
+++ b/package.json
@@ -53,11 +53,13 @@
     "eslint-plugin-vue": "^4.0.0",
     "express": "^4.16.3",
     "express-http-proxy": "^1.2.0",
+    "get-port": "^3.2.0",
     "lodash": "^4.17.10",
     "lorem-ipsum": "^1.0.5",
     "netlify-lambda": "^0.4.0",
     "ngrok": "^3.0.1",
     "npm-run-all": "^4.1.3",
+    "open": "0.0.5",
     "postcss-custom-properties": "^7.0.0",
     "request": "^2.87.0",
     "request-promise-native": "^1.0.5",
