--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "normalize.css": "^8.0.0",
     "nuxt": "^1.0.0",
     "nuxt-i18n": "^4.0.0",
+    "postcss-import": "11.1.0",
     "query-string": "^6.1.0"
   },
   "devDependencies": {
