--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "type": "git",
     "url": "https://github.com/voorhoede/lean-web-kit"
   },
+  "browserslist": [
+    "last 2 versions",
+    "ie 11"
+  ],
   "scripts": {
     "analyze": "nuxt build --analyze",
     "prebuild": "touch ./.env && rimraf dist/ && npm run data",
