--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "normalize.css": "^8.0.0",
     "nuxt": "^1.0.0",
     "nuxt-i18n": "^4.0.0",
-    "postcss-import": "11.1.0",
     "query-string": "^6.1.0"
   },
   "devDependencies": {
@@ -52,6 +51,7 @@
     "@storybook/addon-options": "^3.4.7",
     "@storybook/vue": "^3.4.7",
     "ajv": "^6.5.1",
+    "autoprefixer": "9.0.1",
     "babel-eslint": "^8.2.1",
     "cheerio": "^1.0.0-rc.2",
     "eslint": "^4.15.0",
@@ -65,6 +65,7 @@
     "ngrok": "^3.0.1",
     "npm-run-all": "^4.1.3",
     "postcss-custom-properties": "^7.0.0",
+    "postcss-import": "11.1.0",
     "request": "^2.87.0",
     "request-promise-native": "^1.0.5",
     "rimraf": "^2.6.2",
