--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "normalize.css": "^8.0.0",
     "nuxt": "^1.0.0",
     "nuxt-i18n": "^4.0.0",
-    "query-string": "^6.1.0"
+    "query-string": "5.1.1"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.4.7",
