--- a/package.json
+++ b/package.json
@@ -57,8 +57,10 @@
     "babel-eslint": "^8.2.1",
     "cheerio": "^1.0.0-rc.2",
     "eslint": "^4.15.0",
+    "eslint-config-prettier": "2.9.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
+    "eslint-plugin-prettier": "2.6.2",
     "eslint-plugin-vue": "^4.0.0",
     "http-server": "^0.11.1",
     "lodash": "^4.17.10",
@@ -68,6 +70,7 @@
     "npm-run-all": "^4.1.3",
     "postcss-custom-properties": "^7.0.0",
     "postcss-import": "11.1.0",
+    "prettier": "1.14.0",
     "request": "^2.87.0",
     "request-promise-native": "^1.0.5",
     "rimraf": "^2.6.2",
