Feat/68 create end to end testing setup (#74)
* feat: add test directive

* test: add test example

* use ref to focus on opt-in agree button

* Clean up tests: only setup, docs and demo test

* fix v-test directive example

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# os files
+.DS_Store
+
 # environment variables
 .env
 .envrc
@@ -18,5 +21,6 @@ src/client/static/_redirects
 src/client/static/sitemap.xml
 src/client/static/sw.js
 
-# os files
-.DS_Store
+# test
+test/cypress/screenshots
+test/cypress/videos
