--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@nuxtjs/sitemap": "0.1.1",
     "dotenv": "^6.0.0",
     "dotenv-safe": "^6.0.0",
+    "fuse.js": "3.2.1",
     "normalize.css": "^8.0.0",
     "nuxt": "^1.0.0",
     "nuxt-i18n": "^4.0.0",
@@ -78,6 +79,7 @@
     "rimraf": "^2.6.2",
     "slugify": "^1.3.0",
     "storybook-readme": "^3.3.0",
+    "striptags": "3.1.1",
     "voorhoede-datocms-client": "0.5.2",
     "vue-analytics": "^5.12.2",
     "vue-svg-loader": "0.5.0"
