--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "dotenv": "^6.0.0",
     "dotenv-safe": "^6.0.0",
     "normalize.css": "^8.0.0",
-    "nuxt": "^1.0.0",
+    "nuxt": "2.1.0",
     "nuxt-i18n": "^4.0.0",
     "query-string": "5.1.1",
     "unfetch": "3.1.0"
@@ -63,7 +63,7 @@
     "cypress": "3.1.0",
     "eslint": "^4.15.0",
     "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.7.1",
+    "eslint-loader": "^2.1.1",
     "eslint-plugin-vue": "^4.0.0",
     "http-server": "^0.11.1",
     "lodash": "^4.17.10",
