chore: updated/installed storybook dependencies

--- a/package.json
+++ b/package.json
@@ -55,10 +55,12 @@
     "@storybook/addon-knobs": "^3.4.7",
     "@storybook/addon-links": "^3.4.7",
     "@storybook/addon-options": "^3.4.7",
-    "@storybook/vue": "^3.4.7",
+    "@storybook/addons": "^4.0.0-alpha.24",
+    "@storybook/vue": "^4.0.0-alpha.24",
     "ajv": "^6.5.1",
     "autoprefixer": "9.0.1",
     "babel-eslint": "^8.2.1",
+    "babel-preset-vue": "^2.0.2",
     "cheerio": "^1.0.0-rc.2",
     "cypress": "3.1.0",
     "eslint": "^4.15.0",
