--- a/package.json
+++ b/package.json
@@ -40,13 +40,13 @@
   "dependencies": {
     "@nuxtjs/google-analytics": "^2.0.2",
     "@nuxtjs/proxy": "^1.2.4",
-    "@nuxtjs/pwa": "2.0.8",
-    "@nuxtjs/sitemap": "0.1.1",
+    "@nuxtjs/pwa": "^2.6.0",
+    "@nuxtjs/sitemap": "^0.2.0",
     "babel-polyfill": "^6.26.0",
     "dotenv": "^6.0.0",
     "dotenv-safe": "^6.0.0",
     "normalize.css": "^8.0.0",
-    "nuxt": "2.1.0",
+    "nuxt": "^2.3.4",
     "nuxt-i18n": "^4.0.0",
     "query-string": "5.1.1",
     "unfetch": "^4.0.1"
@@ -59,7 +59,7 @@
     "@storybook/addons": "^4.0.0-alpha.24",
     "@storybook/vue": "^4.0.0-alpha.24",
     "ajv": "^6.5.1",
-    "autoprefixer": "9.0.1",
+    "autoprefixer": "^9.4.5",
     "babel-eslint": "^8.2.1",
     "babel-preset-vue": "^2.0.2",
     "cheerio": "^1.0.0-rc.2",
@@ -83,6 +83,9 @@
     "storybook-readme": "^4.0.0-beta1",
     "voorhoede-datocms-client": "0.5.2",
     "vue-analytics": "^5.12.2",
-    "vue-svg-loader": "0.5.0"
+    "vue-svg-loader": "^0.11.0"
+  },
+  "resolutions": {
+    "babel-plugin-transform-object-rest-spread": "^7.0.0-beta.3"
   }
 }
