--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "watch": "run-p watch:*",
     "watch:test-e2e": "cypress open --config baseUrl=http://localhost:5326"
   },
+  "optionalDependencies": {
+    "cypress": "3.1.0"
+  },
   "dependencies": {
     "@nuxtjs/google-analytics": "^2.0.2",
     "@nuxtjs/proxy": "^1.2.4",
@@ -63,7 +66,6 @@
     "babel-eslint": "^8.2.1",
     "babel-preset-vue": "^2.0.2",
     "cheerio": "^1.0.0-rc.2",
-    "cypress": "3.1.0",
     "eslint": "^4.15.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^2.1.1",
