--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "babel-eslint": "^8.2.1",
     "babel-preset-vue": "^2.0.2",
     "cheerio": "^1.0.0-rc.2",
+    "cypress": "^3.1.4",
     "eslint": "^4.15.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^2.1.1",
