chore: removed Cypress again (will be added to CI like Travis)

--- a/package.json
+++ b/package.json
@@ -31,11 +31,7 @@
     "precommit": "npm run lint",
     "proxy": "ngrok http 5326",
     "start": "run-p dev:server start:dist",
-    "start:dist": "http-server './dist/client/' -c-1 -o -p 5326 --proxy 'http://localhost:9000/'",
-    "test": "run-s test:*",
-    "test:e2e": "NODE_ENV=test run-s prebuild build:client && cypress run --config fileServerFolder=dist/client",
-    "watch": "run-p watch:*",
-    "watch:test-e2e": "cypress open --config baseUrl=http://localhost:5326"
+    "start:dist": "http-server './dist/client/' -c-1 -o -p 5326 --proxy 'http://localhost:9000/'"
   },
   "dependencies": {
     "@nuxtjs/google-analytics": "^2.0.2",
@@ -63,7 +59,6 @@
     "babel-eslint": "^8.2.1",
     "babel-preset-vue": "^2.0.2",
     "cheerio": "^1.0.0-rc.2",
-    "cypress": "^3.1.4",
     "eslint": "^4.15.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^2.1.1",
