--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "type": "git",
     "url": "https://github.com/voorhoede/lean-web-kit"
   },
+  "engines": {
+    "node": ">=10",
+    "npm": ">=5"
+  },
   "browserslist": [
     "last 2 versions",
     "ie 11"
@@ -43,8 +47,8 @@
     "dotenv-safe": "^6.0.0",
     "normalize.css": "^8.0.0",
     "nuxt": "^2.3.4",
-    "nuxt-i18n": "^4.0.0",
-    "query-string": "5.1.1",
+    "nuxt-i18n": "^4.1.0",
+    "query-string": "^6.2.0",
     "unfetch": "^4.0.1"
   },
   "devDependencies": {
@@ -56,21 +60,21 @@
     "@storybook/vue": "^4.0.0-alpha.24",
     "ajv": "^6.5.1",
     "autoprefixer": "^9.4.5",
-    "babel-eslint": "^8.2.1",
+    "babel-eslint": "^10.0.1",
     "babel-preset-vue": "^2.0.2",
     "cheerio": "^1.0.0-rc.2",
-    "eslint": "^4.15.0",
-    "eslint-friendly-formatter": "^3.0.0",
+    "eslint": "^5.12.0",
+    "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^2.1.1",
-    "eslint-plugin-vue": "^4.0.0",
+    "eslint-plugin-vue": "^5.1.0",
     "http-server": "^0.11.1",
     "lodash": "^4.17.10",
     "lorem-ipsum": "^1.0.5",
-    "netlify-lambda": "^0.4.0",
+    "netlify-lambda": "^1.2.0",
     "ngrok": "^3.0.1",
     "npm-run-all": "^4.1.3",
-    "postcss-custom-properties": "^7.0.0",
-    "postcss-import": "11.1.0",
+    "postcss-custom-properties": "^8.0.9",
+    "postcss-import": "^12.0.1",
     "request": "^2.87.0",
     "request-promise-native": "^1.0.5",
     "rimraf": "^2.6.2",
