--- a/package.json
+++ b/package.json
@@ -38,35 +38,17 @@
     "start:dist": "http-server './dist/client/' -c-1 -o -p 5326 --proxy 'http://localhost:9000/'"
   },
   "dependencies": {
-    "@nuxtjs/google-analytics": "^2.0.2",
-    "@nuxtjs/proxy": "^1.2.4",
-    "@nuxtjs/pwa": "^2.6.0",
-    "@nuxtjs/sitemap": "^0.2.0",
-    "babel-polyfill": "^6.26.0",
     "dotenv": "^6.0.0",
     "dotenv-safe": "^6.0.0",
-    "normalize.css": "^8.0.0",
-    "nuxt": "^2.3.4",
-    "nuxt-i18n": "^4.1.0",
-    "query-string": "^5.1.1",
-    "unfetch": "^4.0.1"
+    "normalize.css": "^8.0.0"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.4.7",
-    "@storybook/addon-knobs": "^3.4.7",
-    "@storybook/addon-links": "^3.4.7",
-    "@storybook/addon-options": "^3.4.7",
-    "@storybook/addons": "^4.0.0-alpha.24",
-    "@storybook/vue": "^4.0.0-alpha.24",
     "ajv": "^6.5.1",
     "autoprefixer": "^9.4.5",
-    "babel-eslint": "^10.0.1",
-    "babel-preset-vue": "^2.0.2",
     "cheerio": "^1.0.0-rc.2",
     "eslint": "^5.12.0",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^2.1.1",
-    "eslint-plugin-vue": "^5.1.0",
     "http-server": "^0.11.1",
     "lodash": "^4.17.10",
     "lorem-ipsum": "^1.0.5",
@@ -79,9 +61,6 @@
     "request-promise-native": "^1.0.5",
     "rimraf": "^2.6.2",
     "slugify": "^1.3.0",
-    "storybook-readme": "^4.0.0-beta1",
-    "voorhoede-datocms-client": "0.5.2",
-    "vue-analytics": "^5.12.2",
-    "vue-svg-loader": "^0.11.0"
+    "voorhoede-datocms-client": "0.5.2"
   }
 }
