--- a/package.json
+++ b/package.json
@@ -21,15 +21,19 @@
     "analyze": "echo \"not supported by eleventy\"",
     "prebuild": "touch ./.env && rimraf dist/ && npm run data",
     "build": "NODE_ENV=production run-s build:*",
-    "build:client": "eleventy",
+    "build:html": "eleventy",
+    "build:css": "postcss src/client/assets/*.css --dir dist/client/",
     "build:server": "netlify-lambda build src/server/functions/",
     "predata": "rimraf src/client/static/data/ src/client/static/_redirects",
     "data": "dato dump",
-    "predev": "rimraf dist/ && npm run data",
+    "predev": "rimraf dist/ && npm run data && npm run build:css",
     "dev": "run-p dev:*",
-    "dev:client": "eleventy --serve --port=5326",
+    "dev:html": "eleventy --serve --port=5326",
+    "dev:css": "postcss src/client/assets/*.css --dir dist/client/ --watch",
     "dev:server": "netlify-lambda serve src/server/functions/",
-    "debug": "DEBUG=Eleventy* eleventy --dryrun",
+    "debug": "run-s debug:*",
+    "debug:html": "DEBUG=Eleventy* eleventy",
+    "debug:css": "postcss src/client/assets/*.css --dir dist/client/ --verbose ",
     "lint": "eslint --ext .js --ignore-path .gitignore .",
     "precommit": "npm run lint",
     "proxy": "ngrok http 5326",
@@ -44,8 +48,9 @@
   "devDependencies": {
     "@11ty/eleventy": "^0.7.1",
     "ajv": "^6.5.1",
-    "autoprefixer": "^9.4.5",
+    "autoprefixer": "^9.4.10",
     "cheerio": "^1.0.0-rc.2",
+    "cssnano": "^4.1.10",
     "eslint": "^5.12.0",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^2.1.1",
@@ -55,6 +60,7 @@
     "netlify-lambda": "^1.2.0",
     "ngrok": "^3.0.1",
     "npm-run-all": "^4.1.3",
+    "postcss-cli": "^6.1.2",
     "postcss-custom-properties": "^8.0.9",
     "postcss-import": "^12.0.1",
     "request": "^2.87.0",
