--- a/package.json
+++ b/package.json
@@ -38,50 +38,52 @@
     "start:dist": "http-server './dist/client/' -c-1 -o -p 5326 --proxy 'http://localhost:9000/'"
   },
   "dependencies": {
-    "@nuxtjs/google-analytics": "^2.0.2",
-    "@nuxtjs/proxy": "^1.2.4",
+    "@nuxtjs/google-analytics": "^2.4.0",
+    "@nuxtjs/proxy": "^1.3.3",
     "@nuxtjs/pwa": "^2.6.0",
-    "@nuxtjs/sitemap": "^0.2.0",
+    "@nuxtjs/sitemap": "^0.2.2",
     "babel-polyfill": "^6.26.0",
     "dotenv": "^6.0.0",
     "dotenv-safe": "^6.0.0",
     "normalize.css": "^8.0.0",
-    "nuxt": "^2.3.4",
+    "nuxt": "^2.14.6",
     "nuxt-i18n": "^4.1.0",
     "query-string": "^5.1.1",
-    "unfetch": "^4.0.1"
+    "unfetch": "^4.2.0"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.4.7",
-    "@storybook/addon-knobs": "^3.4.7",
-    "@storybook/addon-links": "^3.4.7",
-    "@storybook/addon-options": "^3.4.7",
-    "@storybook/addons": "^4.0.0-alpha.24",
-    "@storybook/vue": "^4.0.0-alpha.24",
-    "ajv": "^6.5.1",
-    "autoprefixer": "^9.4.5",
-    "babel-eslint": "^10.0.1",
+    "@storybook/addon-actions": "^3.4.12",
+    "@storybook/addon-knobs": "^3.4.12",
+    "@storybook/addon-links": "^3.4.12",
+    "@storybook/addon-options": "^3.4.12",
+    "@storybook/addons": "^4.1.18",
+    "@storybook/vue": "^4.1.18",
+    "ajv": "^6.12.6",
+    "autoprefixer": "^9.8.6",
+    "axios": "^0.20.0",
+    "babel-eslint": "^10.1.0",
     "babel-preset-vue": "^2.0.2",
-    "cheerio": "^1.0.0-rc.2",
-    "eslint": "^5.12.0",
+    "cheerio": "^1.0.0-rc.3",
+    "eslint": "^5.16.0",
     "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-vue": "^5.1.0",
-    "http-server": "^0.11.1",
-    "lodash": "^4.17.10",
+    "eslint-loader": "^2.2.1",
+    "eslint-plugin-vue": "^5.2.3",
+    "http-server": "^0.12.3",
+    "lodash": "^4.17.20",
     "lorem-ipsum": "^1.0.5",
-    "netlify-lambda": "^1.2.0",
-    "ngrok": "^3.0.1",
+    "netlify-lambda": "^1.6.3",
+    "ngrok": "^3.3.0",
     "npm-run-all": "^4.1.3",
-    "postcss-custom-properties": "^8.0.9",
+    "postcss-custom-properties": "^8.0.11",
     "postcss-import": "^12.0.1",
-    "request": "^2.87.0",
-    "request-promise-native": "^1.0.5",
-    "rimraf": "^2.6.2",
-    "slugify": "^1.3.0",
+    "request": "^2.88.2",
+    "request-promise-native": "^1.0.9",
+    "rimraf": "^2.7.1",
+    "slugify": "^1.4.5",
     "storybook-readme": "^4.0.0-beta1",
     "voorhoede-datocms-client": "0.5.2",
-    "vue-analytics": "^5.12.2",
-    "vue-svg-loader": "^0.11.0"
+    "vue-analytics": "^5.22.1",
+    "vue-svg-loader": "^0.11.0",
+    "vue-template-compiler": "^2.6.12"
   }
 }
