--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,6 @@
   command = "npm run build"
   publish = "dist/client/"
   functions = "./dist/server/functions/"
+
+[context.preview]
+  environment = { APP_PREVIEW = "true" }
